--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@tailwind utilities;
 
 /* base styles */
 * {
@@ -25,9 +26,7 @@
   text-decoration: none;
   padding: 6px;
 }
-.navbar a:hover {
-  color: #8e8cd8;
-}
+
 .content {
   max-width: 600px;
   margin: 40px auto;
